--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VirtualRealityBP/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Kitchen_Normal.Kitchen_Normal
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
+GameDefaultMap=/Game/Kitchen_Normal.Kitchen_Normal
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
